--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ SET(CPACK_GENERATOR "RPM")
 SET(CPACK_PACKAGE_NAME ${PACKAGENAME})
 SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${PRODUCT} tool for view/edit LDAP directories.")
 SET(CPACK_RPM_PACKAGE_LICENSE "GPL v2")
-#SET(CPACK_RPM_PACKAGE_GROUP "Other/${COMPANY}")
+SET(CPACK_RPM_PACKAGE_GROUP ${PACKAGEGROUP})
 SET(CPACK_PACKAGE_RELEASE 1)
 SET(CPACK_PACKAGE_CONTACT "Dmitry Markevich <d_markevich@bte.ae>")
 SET(CPACK_PACKAGE_VENDOR ${COMPANY})
