--- a/editor/install/LdapEditorApp.desktop
+++ b/editor/install/LdapEditorApp.desktop
@@ -1,11 +1,12 @@
 [Desktop Entry]
+Encoding=UTF-8
 Name=LDAP Editor utility
 Comment=LDAP Editor utility
 Exec=/usr/local/bin/LdapEditorApp
 Icon=LdapEditorApp
+Categories=Utility;Qt
 Terminal=false
 Type=Application
-Categories=Utilities
 MimeType=application/x-ldapeditor-item;
 GenericName=LDAP Editor utility
 
