-added icons to treeview ldap entries (home/group/person) -add base delegate for edit date/time data types -add base delegate for edit string/int data types -disable edit binary data types -add show binary data types in hex view -set version 0.3

--- a/corelib/CMakeLists.txt
+++ b/corelib/CMakeLists.txt
@@ -21,9 +21,10 @@ add_compile_options(-std=c++11)
 FIND_PACKAGE(Qt5Core CONFIG REQUIRED)
 
 set(LdapCore_SRCS
+    datatypes.h
     qfunctional.h
-	CLdapEntry.h
-	CLdapEntry.cpp
+    CLdapEntry.h
+    CLdapEntry.cpp
     CLdapData.h
     CLdapData.cpp
     CLdapObject.h
