--- a/editor/install/LdapEditorApp.desktop
+++ b/editor/install/LdapEditorApp.desktop
@@ -4,7 +4,7 @@ Name=LDAP Editor utility
 Comment=LDAP Editor utility
 Exec=/usr/local/bin/LdapEditorApp
 Icon=LdapEditorApp
-Categories=Utility;Qt
+Categories=Utilities;Qt;LdapEditor;
 Terminal=false
 Type=Application
 MimeType=application/x-ldapeditor-item;
