The new entry dialog has been added

--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -42,6 +42,8 @@ SET(ldapeditor_SOURCES
     connectiondialog.ui
     ldaptableview.cpp
     ldaptreeview.cpp
+    ldapnewentrydialog.cpp
+    ldapnewentrydialog.ui
     mainwindow.cpp
     main.cpp
 )
@@ -56,6 +58,7 @@ SET(ldapeditor_HEADERS
     connectiondialog.h
     ldaptableview.h
     ldaptreeview.h
+    ldapnewentrydialog.h
     mainwindow.h
     ldapeditordefines.h
     ${CMAKE_BINARY_DIR}/version.h
