CLdapSchema has been added header files for only validation functions

--- a/corelib/CMakeLists.txt
+++ b/corelib/CMakeLists.txt
@@ -17,6 +17,7 @@ FIND_PACKAGE(Qt5Core CONFIG REQUIRED)
 
 set(LdapCore_SRCS
     datatypes.h
+    datatypesinternal.h 
     CLdapException.h
     CLdapException.cpp
     CLdapSchema.h
