--- a/corelib/CMakeLists.txt
+++ b/corelib/CMakeLists.txt
@@ -25,7 +25,9 @@ set(LdapCore_SRCS
     CLdapException.cpp
     CLdapSchema.h
     CLdapSchema.cpp
-	CLdapSchemaValidator.cpp
+    cldapserver.h
+    cldapserver.cpp
+    CLdapSchemaValidator.cpp
     qfunctional.h
     CLdapEntry.h
     CLdapEntry.cpp
